[gd_scene load_steps=2 format=3 uid="uid://bq3jl5xfv0p4y"]

[ext_resource type="Script" path="res://addons/narrative_editor/narrative_dock_ui.gd" id="1_narrative_dock"]

[node name="NarrativeDock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -774.0
offset_bottom = -364.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_narrative_dock")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "叙事事件编辑器"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EventList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PositionGroup" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PosLabel" type="Label" parent="VBoxContainer/PositionGroup"]
layout_mode = 2
text = "目标位置设置:"

[node name="PresetGrid" type="GridContainer" parent="VBoxContainer/PositionGroup"]
layout_mode = 2
columns = 3

[node name="LeftTop" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "左上"

[node name="TopCenter" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "上中"

[node name="RightTop" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "右上"

[node name="LeftCenter" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "左中"

[node name="Center" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "中心"

[node name="RightCenter" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "右中"

[node name="LeftBottom" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "左下"

[node name="BottomCenter" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "下中"

[node name="RightBottom" type="Button" parent="VBoxContainer/PositionGroup/PresetGrid"]
layout_mode = 2
text = "右下"

[node name="CustomContainer" type="HBoxContainer" parent="VBoxContainer/PositionGroup"]
layout_mode = 2

[node name="XLabel" type="Label" parent="VBoxContainer/PositionGroup/CustomContainer"]
layout_mode = 2
text = "X:"

[node name="XInput" type="SpinBox" parent="VBoxContainer/PositionGroup/CustomContainer"]
layout_mode = 2
max_value = 1000.0
value = 500.0

[node name="YLabel" type="Label" parent="VBoxContainer/PositionGroup/CustomContainer"]
layout_mode = 2
text = "Y:"

[node name="YInput" type="SpinBox" parent="VBoxContainer/PositionGroup/CustomContainer"]
layout_mode = 2
max_value = 600.0
value = 300.0

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddMovement" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "添加移动"

[node name="ClearEvents" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "清空"

[node name="InfoContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
text = "角色信息:"

[node name="CurrentPos" type="Label" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
text = "当前位置: (909, 222)"

[node name="RefreshPos" type="Button" parent="VBoxContainer/InfoContainer"]
layout_mode = 2
text = "刷新角色位置"

[node name="ExecuteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "执行事件" 